fix: tweak vertical align, fix: nodebb/nodebb#10128

--- a/static/style.less
+++ b/static/style.less
@@ -11,7 +11,7 @@
 .unanswered, .answered {
 	font-size: 10px;
 	padding: 4px 8px;
-	vertical-align: 15%;
+	vertical-align: bottom;
 	font-weight: 700;
 }
 
